Refactor for REST rules